; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_rv34.c_choose_vlc_set.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_rv34.c_choose_vlc_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@inter_vlcs = common dso_local global i32* null, align 8
@rv34_quant_to_vlc_set = common dso_local global i64** null, align 8
@intra_vlcs = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32, i32)* @choose_vlc_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @choose_vlc_set(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp eq i32 %7, 2
  br i1 %8, label %9, label %15

9:                                                ; preds = %3
  %10 = load i32, i32* %4, align 4
  %11 = icmp slt i32 %10, 19
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load i32, i32* %4, align 4
  %14 = add nsw i32 %13, 10
  store i32 %14, i32* %4, align 4
  br label %25

15:                                               ; preds = %9, %3
  %16 = load i32, i32* %5, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %15
  %19 = load i32, i32* %4, align 4
  %20 = icmp slt i32 %19, 26
  br i1 %20, label %21, label %24

21:                                               ; preds = %18
  %22 = load i32, i32* %4, align 4
  %23 = add nsw i32 %22, 5
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %21, %18, %15
  br label %25

25:                                               ; preds = %24, %12
  %26 = load i32, i32* %6, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %38

28:                                               ; preds = %25
  %29 = load i32*, i32** @inter_vlcs, align 8
  %30 = load i64**, i64*** @rv34_quant_to_vlc_set, align 8
  %31 = getelementptr inbounds i64*, i64** %30, i64 1
  %32 = load i64*, i64** %31, align 8
  %33 = load i32, i32* %4, align 4
  %34 = call i64 @av_clip(i32 %33, i32 0, i32 30)
  %35 = getelementptr inbounds i64, i64* %32, i64 %34
  %36 = load i64, i64* %35, align 8
  %37 = getelementptr inbounds i32, i32* %29, i64 %36
  br label %48

38:                                               ; preds = %25
  %39 = load i32*, i32** @intra_vlcs, align 8
  %40 = load i64**, i64*** @rv34_quant_to_vlc_set, align 8
  %41 = getelementptr inbounds i64*, i64** %40, i64 0
  %42 = load i64*, i64** %41, align 8
  %43 = load i32, i32* %4, align 4
  %44 = call i64 @av_clip(i32 %43, i32 0, i32 30)
  %45 = getelementptr inbounds i64, i64* %42, i64 %44
  %46 = load i64, i64* %45, align 8
  %47 = getelementptr inbounds i32, i32* %39, i64 %46
  br label %48

48:                                               ; preds = %38, %28
  %49 = phi i32* [ %37, %28 ], [ %47, %38 ]
  ret i32* %49
}

declare dso_local i64 @av_clip(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
